--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,3 +2,41 @@ body {
     text-align: center;
     padding: 5%;
 }
+
+
+.market-item {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 10px;
+    padding: 5px;
+}
+
+.rmarket-text {
+    display: inline-block;
+    text-align: left;
+    padding-right: 10px;
+    width: 400px;
+}
+
+.market-img {
+    display: inline-block;
+    right: 0;
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+    border: 1px solid black;
+    border-radius: 2px;
+}
+
+.star {
+    cursor: pointer;
+    font-size: 20px;
+    margin-right:  15px;
+}
+
+.link {
+    position: absolute;
+    left: 30px;
+    top: 30px;
+}
